[package]
name = "cnctd_utils"
version = "0.1.2"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Collection of cnctd tools and traits"
repository = "https://github.com/Connected-Dot/cnctd_utils"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
crossterm = "0.27.0"
figlet-rs = "0.1.5"
